# pve-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: PRD.md  SDD.md
src/pve_mcp/: __init__.py  config.py  server.py
src/pve_mcp/client/: base.py  exceptions.py  models.py
src/pve_mcp/prompts/: diagnostics.py
src/pve_mcp/resources/: node.py  vm.py
src/pve_mcp/tools/: node.py  vm.py
src/pve_mcp/utils/: formatters.py  validators.py
